SSCS-10950 Add list assist create hearing for adjournment (#2957)
* SSCS-10950 adds sendListAssistCreateHearingMessage helper and calls in AdjournCaseAboutToSubmitHandler

hearingMessageHelper requires initializing in class

* SSCS-10950 adds tests

calls sendListAssistCreateHearingMessage

adds feature flag

* SSCS-10950 adds OR clause for getAdjournCaseAreDirectionsBeingMadeToParties == NO in handle method

* SSCS-10950 amends success test and adds another test for not sending message if not ready for list (and no new directions made)

all 3 tests pass

* SSCS-10950 cs

* SSCS-10950 moves test for givenDraftAdjournmentNoticeAlreadyExistsOnCase_thenOverwriteExistingDraft service into dedicated service test

tidies up that test

amends 1 of 3 AdjournCaseAboutToSubmitHandlerTest

* SSCS-10950 modernizes test file

tidies and refactors new tests

adds test for other decision branch

2 outdated tests require rework

* SSCS-10950 removes deprecated tests

* SSCS-10950 adds e2e functional test for list assist

adds adjournCaseLACallback.json

* SSCS-10950 renames and refactors helper methods in functional test

* SSCS-10950 modernizes CcdMidEventControllerFunctionalTest

adds tests for LA json

3 failing tests regarding preview response code

* SSCS-10950 removes unnecessary preview tests for LA

* SSCS-10950 cs

* SSCS-10950 cs

* SSCS-10950 amends test for canBeListed

* SSCS-10950 modernizes AdjournCaseIt

* SSCS-10950 extracts helper methods and renames tests with @DisplayName

* SSCS-10950 further extraction for DRYness

1 test requires potentially new feature code to account for removed deprecated workaround

* SSCS-10950 cs

another small extraction

* SSCS-10950 removes obsolete test and associated json

* SSCS-10950 cs

* SSCS-10950 revert test class name for easier PR review

* SSCS-10950 simplifies helper methods in functional test

* SSCS-10950 removes obsolete list assist functional te