@@ -1,21 +1,20 @@
 package uk.gov.hmcts.reform.sscs.callback;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNull;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
-import static uk.gov.hmcts.reform.sscs.ccd.callback.DocumentType.DRAFT_ADJOURNMENT_NOTICE;
 import static uk.gov.hmcts.reform.sscs.helper.IntegrationTestHelper.assertHttpStatus;
 import static uk.gov.hmcts.reform.sscs.helper.IntegrationTestHelper.getRequestWithAuthHeader;
 
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 import java.time.temporal.ChronoUnit;
-import java.util.Arrays;
-import java.util.Collections;
-import org.junit.Assert;
+import java.util.List;
+import java.util.regex.Pattern;
+import org.jetbrains.annotations.NotNull;
 import org.junit.Test;
+import org.junit.jupiter.api.DisplayName;
 import org.mockito.ArgumentCaptor;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
@@ -24,9 +23,11 @@ import org.springframework.http.HttpStatus;
 import org.springframework.mock.web.MockHttpServletResponse;
 import uk.gov.hmcts.reform.idam.client.IdamClient;
 import uk.gov.hmcts.reform.idam.client.models.UserDetails;
+import uk.gov.hmcts.reform.sscs.ccd.callback.DocumentType;
 import uk.gov.hmcts.reform.sscs.ccd.callback.PreSubmitCallbackResponse;
 import uk.gov.hmcts.reform.sscs.ccd.domain.DynamicList;
 import uk.gov.hmcts.reform.sscs.ccd.domain.SscsCaseData;
+import uk.gov.hmcts.reform.sscs.ccd.domain.SscsDocumentDetails;
 import uk.gov.hmcts.reform.sscs.docassembly.GenerateFile;
 import uk.gov.hmcts.reform.sscs.model.docassembly.AdjournCaseTemplateBody;
 import uk.gov.hmcts.reform.sscs.model.docassembly.GenerateFileParams;
@@ -36,482 +37,363 @@ import uk.gov.hmcts.reform.sscs.model.docassembly.NoticeIssuedTemplateBody;
 @AutoConfigureMockMvc
 public class AdjournCaseIt extends AbstractEventIt {
 
+    public static final String DIRECTIONS_DUE_DATE_PLACEHOLDER = "DIRECTIONS_DUE_DATE_PLACEHOLDER";
+    public static final String GENERATED_VIDEO_WHEN_CASE_NOT_LISTED_STRAIGHT_AWAY_WITH_DIRECTIONS_MADE_JSON =
+        "callback/adjournCaseGeneratedVideoWhenCaseNotListedStraightAwayWithDirectionsMade.json";
+    public static final String GENERATED_PAPER_WHEN_CASE_NOT_LISTED_STRAIGHT_AWAY_WITHOUT_DIRECTIONS_MADE_JSON =
+        "callback/adjournCaseGeneratedPaperWhenCaseNotListedStraightAwayWithoutDirectionsMade.json";
+    public static final String GENERATED_FACE_TO_FACE_WHEN_CASE_NOT_LISTED_STRAIGHT_AWAY_WITHOUT_DIRECTIONS_MADE_JSON =
+        "callback/adjournCaseGeneratedFaceToFaceWhenCaseNotListedStraightAwayWithoutDirectionsMade.json";
+    public static final String VALID_SUBMISSION_WITH_SET_GENERATED_DATE_JSON =
+        "callback/adjournCaseValidSubmissionWithSetGeneratedDate.json";
+    public static final String MANUALLY_GENERATED_JSON = "callback/adjournCaseManuallyGenerated.json";
+    public static final String GENERATED_FACE_TO_FACE_WITH_INTERPRETER_REQUIRED_AND_LANGUAGE_SET_JSON =
+        "callback/adjournCaseGeneratedFaceToFaceWithInterpreterRequiredAndLanguageSet.json";
+    public static final String GENERATED_FACE_TO_FACE_WITH_INTERPRETER_REQUIRED_AND_LANGUAGE_NOT_SET_JSON =
+        "callback/adjournCaseGeneratedFaceToFaceWithInterpreterRequiredAndLanguageNotSet.json";
+    public static final String GENERATED_FACE_TO_FACE_WITH_INTERPRETER_NOT_REQUIRED_AND_LANGUAGE_SET_JSON =
+        "callback/adjournCaseGeneratedFaceToFaceWithInterpreterNotRequiredAndLanguageSet.json";
+    public static final String GENERATED_TELEPHONE_WHEN_CASE_NOT_LISTED_STRAIGHT_AWAY_WITHOUT_DIRECTIONS_MADE_JSON =
+        "callback/adjournCaseGeneratedTelephoneWhenCaseNotListedStraightAwayWithoutDirectionsMade.json";
+    public static final String GENERATED_VIDEO_WHEN_CASE_NOT_LISTED_STRAIGHT_AWAY_WITHOUT_DIRECTIONS_MADE_JSON =
+        "callback/adjournCaseGeneratedVideoWhenCaseNotListedStraightAwayWithoutDirectionsMade.json";
+    public static final String CCD_ABOUT_TO_SUBMIT = "/ccdAboutToSubmit";
+    public static final String CCD_MID_EVENT_PREVIEW_ADJOURN_CASE = "/ccdMidEventPreviewAdjournCase";
+    public static final String CCD_MID_EVENT_ADJOURN_CASE_POPULATE_VENUE_DROPDOWN = "/ccdMidEventAdjournCasePopulateVenueDropdown";
+    public static final String CCD_MID_EVENT = "/ccdMidEvent";
+    public static final String TEST_NAME = "An Test";
+    public static final String CHESTER_MAGISTRATE_S_COURT = "Chester Magistrate's Court";
+    public static final String FIRST_MORNING_SESSION_ON_A_DATE_TO_BE_FIXED =
+        "It will be first in the morning session on a date to be fixed";
+    public static final String A_STANDARD_TIME_SLOT = "a standard time slot";
+    public static final String JUDGE_FULL_NAME = "Judge Full Name";
+    public static final String DATE_2017 = "2017-07-17";
+    public static final String DATE_2019 = "2019-10-10";
+    public static final String DOCUMENT_URL = "document.url";
     @MockBean
     private IdamClient idamClient;
     @MockBean
     private GenerateFile generateFile;
-
     @MockBean
     private UserDetails userDetails;
 
+    @DisplayName("Call to mid event callback when path is YES NO YES will validate the data when due date in past")
     @Test
-    public void callToMidEventCallback_whenPathIsYesNoYes_willValidateTheData_WhenDueDateInPast() throws Exception {
+    public void givenCallToMidEventCallbackWithPathYesNoYesThenValidatesDataWithDueDateInPast() throws Exception {
         setup();
-        setJsonAndReplace("callback/adjournCaseGeneratedVideoWhenCaseNotListedStraightAwayWithDirectionsMade.json", Arrays.asList("DIRECTIONS_DUE_DATE_PLACEHOLDER"),
-            Arrays.asList("2019-10-10"));
+        setJsonAndReplace(GENERATED_VIDEO_WHEN_CASE_NOT_LISTED_STRAIGHT_AWAY_WITH_DIRECTIONS_MADE_JSON,
+            List.of(DIRECTIONS_DUE_DATE_PLACEHOLDER),
+            List.of(DATE_2019));
 
-        MockHttpServletResponse response = getResponse(getRequestWithAuthHeader(json, "/ccdMidEvent"));
+        MockHttpServletResponse response = getResponse(getRequestWithAuthHeader(json, CCD_MID_EVENT));
         assertHttpStatus(response, HttpStatus.OK);
         PreSubmitCallbackResponse<SscsCaseData> result = deserialize(response.getContentAsString());
 
-        assertEquals(1, result.getErrors().size());
-        assertEquals("Directions due date must be in the future", result.getErrors().toArray()[0]);
+        assertThat(result.getErrors())
+            .hasSize(1)
+            .containsOnly("Directions due date must be in the future");
     }
 
+    @DisplayName("Call to mid event callback when path is YES NO YES will validate the data when due date in future")
     @Test
-    public void callToMidEventCallback_whenPathIsYesNoYes_willValidateTheData_WhenDueDateInFuture() throws Exception {
+    public void givenCallToMidEventCallbackWithPathYesNoYesThenValidatesDataWhenDueDateInFuture() throws Exception {
         setup();
-        setJsonAndReplace("callback/adjournCaseGeneratedVideoWhenCaseNotListedStraightAwayWithDirectionsMade.json", Arrays.asList("DIRECTIONS_DUE_DATE_PLACEHOLDER"), Arrays
-            .asList(LocalDate.now().plus(1, ChronoUnit.DAYS).toString()));
+        setJsonAndReplace(GENERATED_VIDEO_WHEN_CASE_NOT_LISTED_STRAIGHT_AWAY_WITH_DIRECTIONS_MADE_JSON,
+            List.of(DIRECTIONS_DUE_DATE_PLACEHOLDER),
+            List.of(LocalDate.now().plus(1, ChronoUnit.DAYS).toString()));
 
-        MockHttpServletResponse response = getResponse(getRequestWithAuthHeader(json, "/ccdMidEvent"));
+        MockHttpServletResponse response = getResponse(getRequestWithAuthHeader(json, CCD_MID_EVENT));
         assertHttpStatus(response, HttpStatus.OK);
         PreSubmitCallbackResponse<SscsCaseData> result = deserialize(response.getContentAsString());
 
-        assertEquals(0, result.getErrors().size());
+        assertThat(result.getErrors()).isEmpty();
     }
 
+    @DisplayName("Call to about to submit handler will write adjourn notice to case")
     @Test
-    public void callToAboutToSubmitHandler_willWriteAdjournNoticeToCase() throws Exception {
+    public void givenCallToAboutToSubmitHandlerThenWritesAdjournNoticeToCase() throws Exception {
         setup();
-        setJsonAndReplace("callback/adjournCaseGeneratedVideoWhenCaseNotListedStraightAwayWithDirectionsMade.json", "DIRECTIONS_DUE_DATE_PLACEHOLDER", "2019-10-10");
+        setJsonAndReplace(GENERATED_VIDEO_WHEN_CASE_NOT_LISTED_STRAIGHT_AWAY_WITH_DIRECTIONS_MADE_JSON,
+            DIRECTIONS_DUE_DATE_PLACEHOLDER, DATE_2019);
 
-        MockHttpServletResponse response = getResponse(getRequestWithAuthHeader(json, "/ccdAboutToSubmit"));
-        assertHttpStatus(response, HttpStatus.OK);
-        PreSubmitCallbackResponse<SscsCaseData> result = deserialize(response.getContentAsString());
-
-        assertEquals(Collections.EMPTY_SET, result.getErrors());
-
-        assertNull(result.getData().getOutcome());
-
-        assertEquals(DRAFT_ADJOURNMENT_NOTICE.getValue(), result.getData().getSscsDocument().get(0).getValue().getDocumentType());
-        assertEquals(LocalDate.now().toString(), result.getData().getSscsDocument().get(0).getValue().getDocumentDateAdded());
-        assertEquals("Draft Adjournment Notice generated on " + LocalDate.now().format(DateTimeFormatter.ofPattern("dd-MM-YYYY")) + ".pdf", result.getData().getSscsDocument().get(0).getValue().getDocumentFileName());
+        noticeGeneratedWithExpectedDetails();
     }
 
-    /**
-     * Due to a CCD bug ( https://tools.hmcts.net/jira/browse/RDM-8200 ) we have had
-     * to implement a workaround in AdjournCaseAboutToSubmitHandler to set
-     * the generated date to now, even though it is already being determined by the
-     * preview document handler.  This is because on submission, the correct generated date
-     * (the one referenced in the preview document) is being overwritten to a null value.
-     * Once RDM-8200 is fixed and we remove the workaround, this test should be changed
-     * to assert that a "something has gone wrong" error is displayed instead of
-     * previewing the document, as a null generated date would indicate that the
-     * date in the preview document hasn't been set.
-     *
-     */
+    @DisplayName("Call to about to submit handler will write adjourn notice to case with generated date as set")
     @Test
-    public void callToAboutToSubmitHandler_willWriteAdjournNoticeToCaseWithGeneratedDateAsNowWhenGeneratedDateNotSet() throws Exception {
+    public void givenCallToAboutToSubmitHandlerThenWritesAdjournNoticeToCaseWithGeneratedDateAsSet() throws Exception {
         setup();
-        setJsonAndReplace(
-            "callback/adjournCaseValidSubmissionWithNullGeneratedDate.json", "DIRECTIONS_DUE_DATE_PLACEHOLDER", "2019-10-10");
+        setJsonAndReplace(VALID_SUBMISSION_WITH_SET_GENERATED_DATE_JSON, DIRECTIONS_DUE_DATE_PLACEHOLDER, DATE_2019);
 
-        MockHttpServletResponse response = getResponse(getRequestWithAuthHeader(json, "/ccdAboutToSubmit"));
-        assertHttpStatus(response, HttpStatus.OK);
-        PreSubmitCallbackResponse<SscsCaseData> result = deserialize(response.getContentAsString());
-
-        assertEquals(Collections.EMPTY_SET, result.getErrors());
-
-        assertNull(result.getData().getOutcome());
-
-        assertEquals(DRAFT_ADJOURNMENT_NOTICE.getValue(), result.getData().getSscsDocument().get(0).getValue().getDocumentType());
-        assertEquals(LocalDate.now().toString(), result.getData().getSscsDocument().get(0).getValue().getDocumentDateAdded());
-        assertEquals("Draft Adjournment Notice generated on " + LocalDate.now().format(DateTimeFormatter.ofPattern("dd-MM-YYYY")) + ".pdf", result.getData().getSscsDocument().get(0).getValue().getDocumentFileName());
-
-
-        assertEquals(LocalDate.now().toString(), result.getData().getAdjournCaseGeneratedDate());
+        PreSubmitCallbackResponse<SscsCaseData> result = noticeGeneratedWithExpectedDetails();
+        assertThat(result.getData().getAdjournCaseGeneratedDate()).isEqualTo("2018-01-01");
     }
 
-    /**
-     * This test asserts that whatever the value of the existing generated date from CCD
-     * submitted as part of the payload to the AdjournCaseAboutToSubmitHandler,
-     * then that date is updated to now() after the AdjournCaseAboutToSubmitHandler is called.
-     * This is due to a workaround we have implemented in the AdjournCaseAboutToSubmitHandler
-     *
-     */
-    @Test
-    public void callToAboutToSubmitHandler_willWriteAdjournNoticeToCaseWithGeneratedDateOfNowWhenGeneratedDateSet() throws Exception {
-        setup();
-        setJsonAndReplace(
-            "callback/adjournCaseValidSubmissionWithSetGeneratedDate.json", "DIRECTIONS_DUE_DATE_PLACEHOLDER", "2019-10-10");
-
-        MockHttpServletResponse response = getResponse(getRequestWithAuthHeader(json, "/ccdAboutToSubmit"));
-        assertHttpStatus(response, HttpStatus.OK);
-        PreSubmitCallbackResponse<SscsCaseData> result = deserialize(response.getContentAsString());
-
-        assertEquals(Collections.EMPTY_SET, result.getErrors());
-
-        assertNull(result.getData().getOutcome());
-
-        assertEquals(DRAFT_ADJOURNMENT_NOTICE.getValue(), result.getData().getSscsDocument().get(0).getValue().getDocumentType());
-        assertEquals(LocalDate.now().toString(), result.getData().getSscsDocument().get(0).getValue().getDocumentDateAdded());
-        assertEquals("Draft Adjournment Notice generated on " + LocalDate.now().format(DateTimeFormatter.ofPattern("dd-MM-YYYY")) + ".pdf", result.getData().getSscsDocument().get(0).getValue().getDocumentFileName());
-
-
-        assertEquals(LocalDate.now().toString(), result.getData().getAdjournCaseGeneratedDate());
-    }
-
+    @DisplayName("Call to about to submit handler will write manually uploaded adjourn notice to case")
     @Test
     //FIXME: Might need to improve the data for this test once manual route has been fully implemented
-    public void callToAboutToSubmitHandler_willWriteManuallyUploadedAdjournNoticeToCase() throws Exception {
-        setup("callback/adjournCaseManuallyGenerated.json");
-
-        MockHttpServletResponse response = getResponse(getRequestWithAuthHeader(json, "/ccdAboutToSubmit"));
-        assertHttpStatus(response, HttpStatus.OK);
-        PreSubmitCallbackResponse<SscsCaseData> result = deserialize(response.getContentAsString());
-
-        assertEquals(Collections.EMPTY_SET, result.getErrors());
-
-        assertNull(result.getData().getOutcome());
-
-        assertEquals(DRAFT_ADJOURNMENT_NOTICE.getValue(), result.getData().getSscsDocument().get(0).getValue().getDocumentType());
-        assertEquals(LocalDate.now().toString(), result.getData().getSscsDocument().get(0).getValue().getDocumentDateAdded());
-        assertEquals("Draft Adjournment Notice generated on " + LocalDate.now().format(DateTimeFormatter.ofPattern("dd-MM-yyyy")) + ".pdf", result.getData().getSscsDocument().get(0).getValue().getDocumentFileName());
+    public void givenCallToAboutToSubmitHandlerThenWritesManuallyUploadedAdjournNoticeToCase() throws Exception {
+        setup(MANUALLY_GENERATED_JSON);
+        
+        noticeGeneratedWithExpectedDetails();
     }
 
+    @DisplayName("Call to mid event preview adjourn case callback will preview the document for face to face")
     @Test
-    public void callToMidEventPreviewAdjournCaseCallback_willPreviewTheDocumentForFaceToFace() throws Exception {
+    public void givenCallToMidEventPreviewAdjournCaseCallbackThenPreviewsTheDocumentForFaceToFace() throws Exception {
         setup();
-        json = getJson("callback/adjournCaseGeneratedFaceToFaceWhenCaseNotListedStraightAwayWithoutDirectionsMade.json");
+        json = getJson(GENERATED_FACE_TO_FACE_WHEN_CASE_NOT_LISTED_STRAIGHT_AWAY_WITHOUT_DIRECTIONS_MADE_JSON);
 
-        String documentUrl = "document.url";
-        when(generateFile.assemble(any())).thenReturn(documentUrl);
+        checkStandardDocumentNoInterpreter();
+    }
 
-        when(userDetails.getFullName()).thenReturn("Judge Full Name");
+    @DisplayName("Call to mid event preview adjourn case callback will preview the document for face to face "
+        + "when interpreter required and language set")
+    @Test
+    public void givenCallToMidEventPreviewAdjournCaseCallbackThenPreviewsTheDocumentForFaceToFaceWhenInterpreterRequiredAndLanguageSet()
+        throws Exception {
+        setup();
+        json = getJson(GENERATED_FACE_TO_FACE_WITH_INTERPRETER_REQUIRED_AND_LANGUAGE_SET_JSON);
 
-        when(idamClient.getUserDetails("Bearer userToken")).thenReturn(userDetails);
+        checkDocumentNoErrors();
 
-        MockHttpServletResponse response = getResponse(getRequestWithAuthHeader(json, "/ccdMidEventPreviewAdjournCase"));
-        assertHttpStatus(response, HttpStatus.OK);
-        PreSubmitCallbackResponse<SscsCaseData> result = deserialize(response.getContentAsString());
-
-        assertEquals(Collections.EMPTY_SET, result.getErrors());
-
-        assertEquals(documentUrl, result.getData().getAdjournCasePreviewDocument().getDocumentUrl());
-
-        ArgumentCaptor<GenerateFileParams> capture = ArgumentCaptor.forClass(GenerateFileParams.class);
-        verify(generateFile).assemble(capture.capture());
-        final NoticeIssuedTemplateBody parentPayload = (NoticeIssuedTemplateBody) capture.getValue().getFormPayload();
+        final NoticeIssuedTemplateBody parentPayload = (NoticeIssuedTemplateBody) getGenerateFileParamsArgumentCaptor().getValue().getFormPayload();
         final AdjournCaseTemplateBody payload = parentPayload.getAdjournCaseTemplateBody();
 
-        assertEquals("An Test", parentPayload.getAppellantFullName());
-        assertEquals("12345656789", parentPayload.getCaseId());
-        assertEquals("JT 12 34 56 D", parentPayload.getNino());
-        assertNull(parentPayload.getAppointeeFullName());
-        assertEquals("DRAFT ADJOURNMENT NOTICE", parentPayload.getNoticeType());
-        assertEquals("Judge Full Name", parentPayload.getUserName());
-        assertEquals(LocalDate.parse("2017-07-17"), payload.getHeldOn());
-        assertEquals("Chester Magistrate's Court", payload.getHeldAt());
-        assertEquals("Judge Full Name", payload.getHeldBefore());
-        assertEquals("It will be first in the morning session on a date to be fixed", payload.getNextHearingDate());
-        assertEquals("face to face hearing", payload.getNextHearingType());
-        assertEquals("Chester Magistrate's Court", payload.getNextHearingVenue());
-        assertEquals("a standard time slot", payload.getNextHearingTimeslot());
-        assertEquals("Chester Magistrate's Court", payload.getHeldAt());
-        assertEquals("Judge Full Name", payload.getHeldBefore());
-        assertEquals(LocalDate.parse("2017-07-17"), payload.getHeldOn());
-        assertEquals("faceToFace", payload.getHearingType());
-        assertEquals("something else", payload.getAdditionalDirections().get(0));
-        assertEquals("Reasons 1", payload.getReasonsForDecision().get(0));
-        assertEquals("yes", payload.getPanelMembersExcluded());
-        assertEquals("An Test", payload.getAppellantName());
-        assertEquals(true, payload.isNextHearingAtVenue());
-        assertNull(payload.getInterpreterDescription());
+        checkPayloadDetailsAtVenue(
+            parentPayload,
+            payload,
+            "It will be first in the afternoon session on a date to be fixed",
+            "an interpreter in French"
+        );
     }
 
-    @Test
-    public void callToMidEventPreviewAdjournCaseCallback_willPreviewTheDocumentForFaceToFace_WhenInterpreterRequiredAndLanguageSet() throws Exception {
-        setup();
-        json =  getJson(
-            "callback/adjournCaseGeneratedFaceToFaceWithInterpreterRequiredAndLanguageSet.json");
-
-        String documentUrl = "document.url";
-        when(generateFile.assemble(any())).thenReturn(documentUrl);
-
-        when(userDetails.getFullName()).thenReturn("Judge Full Name");
-
-        when(idamClient.getUserDetails("Bearer userToken")).thenReturn(userDetails);
-
-        MockHttpServletResponse response = getResponse(getRequestWithAuthHeader(json, "/ccdMidEventPreviewAdjournCase"));
-        assertHttpStatus(response, HttpStatus.OK);
-        PreSubmitCallbackResponse<SscsCaseData> result = deserialize(response.getContentAsString());
-
-        assertEquals(Collections.EMPTY_SET, result.getErrors());
-
-        assertEquals(documentUrl, result.getData().getAdjournCasePreviewDocument().getDocumentUrl());
-
+    @NotNull
+    private ArgumentCaptor<GenerateFileParams> getGenerateFileParamsArgumentCaptor() {
         ArgumentCaptor<GenerateFileParams> capture = ArgumentCaptor.forClass(GenerateFileParams.class);
         verify(generateFile).assemble(capture.capture());
-        final NoticeIssuedTemplateBody parentPayload = (NoticeIssuedTemplateBody) capture.getValue().getFormPayload();
-        final AdjournCaseTemplateBody payload = parentPayload.getAdjournCaseTemplateBody();
-
-        assertEquals("An Test", parentPayload.getAppellantFullName());
-        assertEquals("12345656789", parentPayload.getCaseId());
-        assertEquals("JT 12 34 56 D", parentPayload.getNino());
-        assertNull(parentPayload.getAppointeeFullName());
-        assertEquals("DRAFT ADJOURNMENT NOTICE", parentPayload.getNoticeType());
-        assertEquals("Judge Full Name", parentPayload.getUserName());
-        assertEquals(LocalDate.parse("2017-07-17"), payload.getHeldOn());
-        assertEquals("Chester Magistrate's Court", payload.getHeldAt());
-        assertEquals("Judge Full Name", payload.getHeldBefore());
-        assertEquals("It will be first in the afternoon session on a date to be fixed", payload.getNextHearingDate());
-        assertEquals("face to face hearing", payload.getNextHearingType());
-        assertEquals("Chester Magistrate's Court", payload.getNextHearingVenue());
-        assertEquals("a standard time slot", payload.getNextHearingTimeslot());
-        assertEquals("Chester Magistrate's Court", payload.getHeldAt());
-        assertEquals("Judge Full Name", payload.getHeldBefore());
-        assertEquals(LocalDate.parse("2017-07-17"), payload.getHeldOn());
-        assertEquals("faceToFace", payload.getHearingType());
-        assertEquals("something else", payload.getAdditionalDirections().get(0));
-        assertEquals("Reasons 1", payload.getReasonsForDecision().get(0));
-        assertEquals("yes", payload.getPanelMembersExcluded());
-        assertEquals("An Test", payload.getAppellantName());
-        assertEquals(true, payload.isNextHearingAtVenue());
-        assertEquals("an interpreter in French", payload.getInterpreterDescription());
+        return capture;
     }
 
+    @DisplayName("Call to mid event preview adjourn case callback will not preview the document for face to face "
+        + "when interpreter required and language not set")
     @Test
-    public void callToMidEventPreviewAdjournCaseCallback_willNotPreviewTheDocumentForFaceToFace_WhenInterpreterRequiredAndLanguageNotSet() throws Exception {
+    public void givenCallToMidEventPreviewAdjournCaseCallbackThenPreviewsTheDocumentForFaceToFaceWhenInterpreterRequiredAndLanguageNotSet()
+        throws Exception {
         setup();
-        json =  getJson(
-            "callback/adjournCaseGeneratedFaceToFaceWithInterpreterRequiredAndLanguageNotSet.json");
+        json =  getJson(GENERATED_FACE_TO_FACE_WITH_INTERPRETER_REQUIRED_AND_LANGUAGE_NOT_SET_JSON);
 
-        String documentUrl = "document.url";
-        when(generateFile.assemble(any())).thenReturn(documentUrl);
+        PreSubmitCallbackResponse<SscsCaseData> result = getPreSubmitCallbackResponse();
 
-        when(userDetails.getFullName()).thenReturn("Judge Full Name");
+        assertThat(result.getData().getAdjournCasePreviewDocument()).isNull();
 
-        when(idamClient.getUserDetails("Bearer userToken")).thenReturn(userDetails);
-
-        MockHttpServletResponse response = getResponse(getRequestWithAuthHeader(json, "/ccdMidEventPreviewAdjournCase"));
-        assertHttpStatus(response, HttpStatus.OK);
-        PreSubmitCallbackResponse<SscsCaseData> result = deserialize(response.getContentAsString());
-
-        assertNull(result.getData().getAdjournCasePreviewDocument());
-
-        assertEquals(1, result.getErrors().size());
+        assertThat(result.getErrors()).hasSize(1);
 
         String error = result.getErrors().stream().findFirst().orElse("");
-        assertEquals("An interpreter is required but no language is set", error);
+        assertThat(error).isEqualTo("An interpreter is required but no language is set");
     }
 
+    @DisplayName("Call to mid event preview adjourn case callback will preview the document for face to face "
+        + "when interpreter not required and language set")
     @Test
-    public void callToMidEventPreviewAdjournCaseCallback_willPreviewTheDocumentForFaceToFace_WhenInterpreterNotRequiredAndLanguageSet() throws Exception {
+    public void givenCallToMidEventPreviewAdjournCaseCallbackThenPreviewsTheDocumentForFaceToFaceWhenInterpreterNotRequiredAndLanguageSet()
+        throws Exception {
         setup();
-        json = getJson(
-            "callback/adjournCaseGeneratedFaceToFaceWithInterpreterNotRequiredAndLanguageSet.json");
+        json = getJson(GENERATED_FACE_TO_FACE_WITH_INTERPRETER_NOT_REQUIRED_AND_LANGUAGE_SET_JSON);
 
-        String documentUrl = "document.url";
-        when(generateFile.assemble(any())).thenReturn(documentUrl);
+        checkStandardDocumentNoInterpreter();
+    }
 
-        when(userDetails.getFullName()).thenReturn("Judge Full Name");
+    @DisplayName("Call to mid event preview adjourn case callback will preview the document for telephone")
+    @Test
+    public void givenCallToMidEventPreviewAdjournCaseCallbackThenPreviewsTheDocumentForTelephone() throws Exception {
+        setup();
+        json = getJson(GENERATED_TELEPHONE_WHEN_CASE_NOT_LISTED_STRAIGHT_AWAY_WITHOUT_DIRECTIONS_MADE_JSON);
 
-        when(idamClient.getUserDetails("Bearer userToken")).thenReturn(userDetails);
+        checkDocumentNoErrors();
 
-        MockHttpServletResponse response = getResponse(getRequestWithAuthHeader(json, "/ccdMidEventPreviewAdjournCase"));
-        assertHttpStatus(response, HttpStatus.OK);
-        PreSubmitCallbackResponse<SscsCaseData> result = deserialize(response.getContentAsString());
-
-        assertEquals(Collections.EMPTY_SET, result.getErrors());
-
-        assertEquals(documentUrl, result.getData().getAdjournCasePreviewDocument().getDocumentUrl());
-
-        ArgumentCaptor<GenerateFileParams> capture = ArgumentCaptor.forClass(GenerateFileParams.class);
-        verify(generateFile).assemble(capture.capture());
-        final NoticeIssuedTemplateBody parentPayload = (NoticeIssuedTemplateBody) capture.getValue().getFormPayload();
+        final NoticeIssuedTemplateBody parentPayload = (NoticeIssuedTemplateBody) getGenerateFileParamsArgumentCaptor().getValue().getFormPayload();
         final AdjournCaseTemplateBody payload = parentPayload.getAdjournCaseTemplateBody();
 
-        assertEquals("An Test", parentPayload.getAppellantFullName());
-        assertEquals("12345656789", parentPayload.getCaseId());
-        assertEquals("JT 12 34 56 D", parentPayload.getNino());
-        assertNull(parentPayload.getAppointeeFullName());
-        assertEquals("DRAFT ADJOURNMENT NOTICE", parentPayload.getNoticeType());
-        assertEquals("Judge Full Name", parentPayload.getUserName());
-        assertEquals(LocalDate.parse("2017-07-17"), payload.getHeldOn());
-        assertEquals("Chester Magistrate's Court", payload.getHeldAt());
-        assertEquals("Judge Full Name", payload.getHeldBefore());
-        assertEquals("It will be first in the morning session on a date to be fixed", payload.getNextHearingDate());
-        assertEquals("face to face hearing", payload.getNextHearingType());
-        assertEquals("Chester Magistrate's Court", payload.getNextHearingVenue());
-        assertEquals("a standard time slot", payload.getNextHearingTimeslot());
-        assertEquals("Chester Magistrate's Court", payload.getHeldAt());
-        assertEquals("Judge Full Name", payload.getHeldBefore());
-        assertEquals(LocalDate.parse("2017-07-17"), payload.getHeldOn());
-        assertEquals("faceToFace", payload.getHearingType());
-        assertEquals("something else", payload.getAdditionalDirections().get(0));
-        assertEquals("Reasons 1", payload.getReasonsForDecision().get(0));
-        assertEquals("yes", payload.getPanelMembersExcluded());
-        assertEquals("An Test", payload.getAppellantName());
-        assertEquals(true, payload.isNextHearingAtVenue());
-        assertNull(payload.getInterpreterDescription());
+        checkPayloadDetailsNoVenue(
+            parentPayload,
+            payload,
+            FIRST_MORNING_SESSION_ON_A_DATE_TO_BE_FIXED,
+            "telephone hearing",
+            A_STANDARD_TIME_SLOT,
+            "telephone"
+        );
     }
 
+    @DisplayName("Call to mid event preview adjourn case callback will preview the document for video")
     @Test
-    public void callToMidEventPreviewAdjournCaseCallback_willPreviewTheDocumentForTelephone() throws Exception {
+    public void givenCallToMidEventPreviewAdjournCaseCallbackThenPreviewsTheDocumentForVideo() throws Exception {
         setup();
-        json = getJson(
-            "callback/adjournCaseGeneratedTelephoneWhenCaseNotListedStraightAwayWithoutDirectionsMade.json");
+        json = getJson(GENERATED_VIDEO_WHEN_CASE_NOT_LISTED_STRAIGHT_AWAY_WITHOUT_DIRECTIONS_MADE_JSON);
 
-        String documentUrl = "document.url";
-        when(generateFile.assemble(any())).thenReturn(documentUrl);
+        checkDocumentNoErrors();
 
-        when(userDetails.getFullName()).thenReturn("Judge Full Name");
-
-        when(idamClient.getUserDetails("Bearer userToken")).thenReturn(userDetails);
-
-        MockHttpServletResponse response = getResponse(getRequestWithAuthHeader(json, "/ccdMidEventPreviewAdjournCase"));
-        assertHttpStatus(response, HttpStatus.OK);
-        PreSubmitCallbackResponse<SscsCaseData> result = deserialize(response.getContentAsString());
-
-        assertEquals(Collections.EMPTY_SET, result.getErrors());
-
-        assertEquals(documentUrl, result.getData().getAdjournCasePreviewDocument().getDocumentUrl());
-
-        ArgumentCaptor<GenerateFileParams> capture = ArgumentCaptor.forClass(GenerateFileParams.class);
-        verify(generateFile).assemble(capture.capture());
-        final NoticeIssuedTemplateBody parentPayload = (NoticeIssuedTemplateBody) capture.getValue().getFormPayload();
+        final NoticeIssuedTemplateBody parentPayload = (NoticeIssuedTemplateBody) getGenerateFileParamsArgumentCaptor().getValue().getFormPayload();
         final AdjournCaseTemplateBody payload = parentPayload.getAdjournCaseTemplateBody();
 
-        assertEquals("An Test", parentPayload.getAppellantFullName());
-        assertEquals("12345656789", parentPayload.getCaseId());
-        assertEquals("JT 12 34 56 D", parentPayload.getNino());
-        assertNull(parentPayload.getAppointeeFullName());
-        assertEquals("DRAFT ADJOURNMENT NOTICE", parentPayload.getNoticeType());
-        assertEquals("Judge Full Name", parentPayload.getUserName());
-        assertEquals(LocalDate.parse("2017-07-17"), payload.getHeldOn());
-        assertEquals("Chester Magistrate's Court", payload.getHeldAt());
-        assertEquals("Judge Full Name", payload.getHeldBefore());
-        assertEquals("It will be first in the morning session on a date to be fixed", payload.getNextHearingDate());
-        assertEquals("telephone hearing", payload.getNextHearingType());
-        assertNull(payload.getNextHearingVenue());
-        assertEquals("a standard time slot", payload.getNextHearingTimeslot());
-        assertEquals("Chester Magistrate's Court", payload.getHeldAt());
-        assertEquals("Judge Full Name", payload.getHeldBefore());
-        assertEquals(LocalDate.parse("2017-07-17"), payload.getHeldOn());
-        assertEquals("telephone", payload.getHearingType());
-        assertEquals("something else", payload.getAdditionalDirections().get(0));
-        assertEquals("Reasons 1", payload.getReasonsForDecision().get(0));
-        assertEquals("yes", payload.getPanelMembersExcluded());
-        assertEquals("An Test", payload.getAppellantName());
-        assertEquals(false, payload.isNextHearingAtVenue());
+        checkPayloadDetailsNoVenue(
+            parentPayload,
+            payload,
+            "It will be first in the session on a date to be fixed",
+            "video hearing",
+            A_STANDARD_TIME_SLOT,
+            "video"
+        );
     }
 
+    @DisplayName("Call to mid event preview adjourn case callback will preview the document for paper")
     @Test
-    public void callToMidEventPreviewAdjournCaseCallback_willPreviewTheDocumentForVideo() throws Exception {
+    public void givenCallToMidEventPreviewAdjournCaseCallbackThenPreviewsTheDocumentForPaper() throws Exception {
         setup();
-        json = getJson(
-            "callback/adjournCaseGeneratedVideoWhenCaseNotListedStraightAwayWithoutDirectionsMade.json");
+        json = getJson(GENERATED_PAPER_WHEN_CASE_NOT_LISTED_STRAIGHT_AWAY_WITHOUT_DIRECTIONS_MADE_JSON);
 
-        String documentUrl = "document.url";
-        when(generateFile.assemble(any())).thenReturn(documentUrl);
+        checkDocumentNoErrors();
 
-        when(userDetails.getFullName()).thenReturn("Judge Full Name");
-
-        when(idamClient.getUserDetails("Bearer userToken")).thenReturn(userDetails);
-
-        MockHttpServletResponse response = getResponse(getRequestWithAuthHeader(json, "/ccdMidEventPreviewAdjournCase"));
-        assertHttpStatus(response, HttpStatus.OK);
-        PreSubmitCallbackResponse<SscsCaseData> result = deserialize(response.getContentAsString());
-
-        assertEquals(Collections.EMPTY_SET, result.getErrors());
-
-        assertEquals(documentUrl, result.getData().getAdjournCasePreviewDocument().getDocumentUrl());
-
-        ArgumentCaptor<GenerateFileParams> capture = ArgumentCaptor.forClass(GenerateFileParams.class);
-        verify(generateFile).assemble(capture.capture());
-        final NoticeIssuedTemplateBody parentPayload = (NoticeIssuedTemplateBody) capture.getValue().getFormPayload();
+        final NoticeIssuedTemplateBody parentPayload = (NoticeIssuedTemplateBody) getGenerateFileParamsArgumentCaptor().getValue().getFormPayload();
         final AdjournCaseTemplateBody payload = parentPayload.getAdjournCaseTemplateBody();
 
-        assertEquals("An Test", parentPayload.getAppellantFullName());
-        assertEquals("12345656789", parentPayload.getCaseId());
-        assertEquals("JT 12 34 56 D", parentPayload.getNino());
-        assertNull(parentPayload.getAppointeeFullName());
-        assertEquals("DRAFT ADJOURNMENT NOTICE", parentPayload.getNoticeType());
-        assertEquals("Judge Full Name", parentPayload.getUserName());
-        assertEquals(LocalDate.parse("2017-07-17"), payload.getHeldOn());
-        assertEquals("Chester Magistrate's Court", payload.getHeldAt());
-        assertEquals("Judge Full Name", payload.getHeldBefore());
-        assertEquals("It will be first in the session on a date to be fixed", payload.getNextHearingDate());
-        assertEquals("video hearing", payload.getNextHearingType());
-        assertNull(payload.getNextHearingVenue());
-        assertEquals("a standard time slot", payload.getNextHearingTimeslot());
-        assertEquals("Chester Magistrate's Court", payload.getHeldAt());
-        assertEquals("Judge Full Name", payload.getHeldBefore());
-        assertEquals(LocalDate.parse("2017-07-17"), payload.getHeldOn());
-        assertEquals("video", payload.getHearingType());
-        assertEquals("something else", payload.getAdditionalDirections().get(0));
-        assertEquals("Reasons 1", payload.getReasonsForDecision().get(0));
-        assertEquals("yes", payload.getPanelMembersExcluded());
-        assertEquals("An Test", payload.getAppellantName());
-        assertEquals(false, payload.isNextHearingAtVenue());
+        checkPayloadDetailsNoVenue(
+            parentPayload,
+            payload,
+            FIRST_MORNING_SESSION_ON_A_DATE_TO_BE_FIXED,
+            "decision on the papers",
+            null,
+            "paper"
+        );
     }
 
+    @DisplayName("Call to populate venue dropdown will populate next hearing venue selected list")
     @Test
-    public void callToMidEventPreviewAdjournCaseCallback_willPreviewTheDocumentForPaper() throws Exception {
-        setup();
-        json = getJson(
-            "callback/adjournCaseGeneratedPaperWhenCaseNotListedStraightAwayWithoutDirectionsMade.json");
-
-        String documentUrl = "document.url";
-        when(generateFile.assemble(any())).thenReturn(documentUrl);
-
-        when(userDetails.getFullName()).thenReturn("Judge Full Name");
-
-        when(idamClient.getUserDetails("Bearer userToken")).thenReturn(userDetails);
-
-        MockHttpServletResponse response = getResponse(getRequestWithAuthHeader(json, "/ccdMidEventPreviewAdjournCase"));
-        assertHttpStatus(response, HttpStatus.OK);
-        PreSubmitCallbackResponse<SscsCaseData> result = deserialize(response.getContentAsString());
-
-        assertEquals(Collections.EMPTY_SET, result.getErrors());
-
-        assertEquals(documentUrl, result.getData().getAdjournCasePreviewDocument().getDocumentUrl());
-
-        ArgumentCaptor<GenerateFileParams> capture = ArgumentCaptor.forClass(GenerateFileParams.class);
-        verify(generateFile).assemble(capture.capture());
-        final NoticeIssuedTemplateBody parentPayload = (NoticeIssuedTemplateBody) capture.getValue().getFormPayload();
-        final AdjournCaseTemplateBody payload = parentPayload.getAdjournCaseTemplateBody();
-
-        assertEquals("An Test", parentPayload.getAppellantFullName());
-        assertEquals("12345656789", parentPayload.getCaseId());
-        assertEquals("JT 12 34 56 D", parentPayload.getNino());
-        assertNull(parentPayload.getAppointeeFullName());
-        assertEquals("DRAFT ADJOURNMENT NOTICE", parentPayload.getNoticeType());
-        assertEquals("Judge Full Name", parentPayload.getUserName());
-        assertEquals(LocalDate.parse("2017-07-17"), payload.getHeldOn());
-        assertEquals("Chester Magistrate's Court", payload.getHeldAt());
-        assertEquals("Judge Full Name", payload.getHeldBefore());
-        assertEquals("It will be first in the morning session on a date to be fixed", payload.getNextHearingDate());
-        assertEquals("decision on the papers", payload.getNextHearingType());
-        assertNull(payload.getNextHearingVenue());
-        assertNull(payload.getNextHearingTimeslot());
-        assertEquals("Chester Magistrate's Court", payload.getHeldAt());
-        assertEquals("Judge Full Name", payload.getHeldBefore());
-        assertEquals(LocalDate.parse("2017-07-17"), payload.getHeldOn());
-        assertEquals("paper", payload.getHearingType());
-        assertEquals("something else", payload.getAdditionalDirections().get(0));
-        assertEquals("Reasons 1", payload.getReasonsForDecision().get(0));
-        assertEquals("yes", payload.getPanelMembersExcluded());
-        assertEquals("An Test", payload.getAppellantName());
-        assertEquals(false, payload.isNextHearingAtVenue());
-
-    }
-
-    @Test
-    public void callToPopulateVenueDropdown_willPopulateNextHearingVenueSelectedList() throws Exception {
+    public void givenCallToPopulateVenueDropdownThenPopulatesNextHearingVenueSelectedList() throws Exception {
         setup();
         String nextHearingDateSpecificDate = "2020-07-01";
-        final String expectedNextHearingDateSpecificDateInDocument = "01/07/2020";
-        setJsonAndReplace(
-            "callback/adjournCaseGeneratedFaceToFaceWhenCaseNotListedStraightAwayWithoutDirectionsMade.json", "NEXT_HEARING_SPECIFIC_DATE_PLACEHOLDER", nextHearingDateSpecificDate);
+        setJsonAndReplace(GENERATED_FACE_TO_FACE_WHEN_CASE_NOT_LISTED_STRAIGHT_AWAY_WITHOUT_DIRECTIONS_MADE_JSON,
+            "NEXT_HEARING_SPECIFIC_DATE_PLACEHOLDER",
+            nextHearingDateSpecificDate);
 
-        MockHttpServletResponse response = getResponse(getRequestWithAuthHeader(json, "/ccdMidEventAdjournCasePopulateVenueDropdown"));
+        MockHttpServletResponse response = getResponse(getRequestWithAuthHeader(json, CCD_MID_EVENT_ADJOURN_CASE_POPULATE_VENUE_DROPDOWN));
         assertHttpStatus(response, HttpStatus.OK);
         PreSubmitCallbackResponse<SscsCaseData> result = deserialize(response.getContentAsString());
-        assertEquals(0, result.getErrors().size());
+        assertThat(result.getErrors()).isEmpty();
         DynamicList results = result.getData().getAdjournCaseNextHearingVenueSelected();
-        Assert.assertFalse(results.getListItems().isEmpty());
+        assertThat(results.getListItems()).isNotEmpty();
+    }
+
+    private void checkStandardDocumentNoInterpreter() throws Exception {
+        checkDocumentNoErrors();
+
+        final NoticeIssuedTemplateBody parentPayload = (NoticeIssuedTemplateBody) getGenerateFileParamsArgumentCaptor().getValue().getFormPayload();
+        final AdjournCaseTemplateBody payload = parentPayload.getAdjournCaseTemplateBody();
+
+        checkPayloadDetailsAtVenue(
+            parentPayload,
+            payload,
+            FIRST_MORNING_SESSION_ON_A_DATE_TO_BE_FIXED,
+            null
+        );
+    }
+
+    @NotNull
+    private PreSubmitCallbackResponse<SscsCaseData> noticeGeneratedWithExpectedDetails() throws Exception {
+        MockHttpServletResponse response = getResponse(getRequestWithAuthHeader(json, CCD_ABOUT_TO_SUBMIT));
+        assertHttpStatus(response, HttpStatus.OK);
+        PreSubmitCallbackResponse<SscsCaseData> result = deserialize(response.getContentAsString());
+
+        assertThat(result.getErrors()).isEmpty();
+
+        assertThat(result.getData().getOutcome()).isNull();
+
+        SscsDocumentDetails document = result.getData().getSscsDocument().get(0).getValue();
+        assertThat(document.getDocumentType()).isEqualTo(DocumentType.DRAFT_ADJOURNMENT_NOTICE.getValue());
+        assertThat(document.getDocumentDateAdded()).isEqualTo(LocalDate.now().toString());
+        assertThat(document.getDocumentFileName()).containsPattern(
+            Pattern.compile("Draft Adjournment Notice generated on \\d{1,2}-\\d{1,2}-\\d{4}\\.pdf"));
+        assertThat(document.getDocumentFileName()).contains(
+            LocalDate.now().format(DateTimeFormatter.ofPattern("dd-MM-yyyy")));
+        return result;
+    }
+
+    private static void checkPayloadDetailsNoVenue(
+        NoticeIssuedTemplateBody parentPayload,
+        AdjournCaseTemplateBody payload,
+        String nextHearingDate,
+        String nextHearingType,
+        String nextHearingTimeslot,
+        String hearingType
+    ) {
+        checkPayloadDetails(parentPayload, payload, nextHearingDate, nextHearingType,
+            nextHearingTimeslot, hearingType, null);
+        assertThat(payload.isNextHearingAtVenue()).isFalse();
+        assertThat(payload.getNextHearingVenue()).isNull();
+    }
+
+    private static void checkPayloadDetailsAtVenue(
+        NoticeIssuedTemplateBody parentPayload,
+        AdjournCaseTemplateBody payload,
+        String nextHearingDate,
+        String interpreterDescription
+    ) {
+        checkPayloadDetails(parentPayload, payload, nextHearingDate, "face to face hearing",
+            A_STANDARD_TIME_SLOT, "faceToFace", interpreterDescription);
+        assertThat(payload.isNextHearingAtVenue()).isTrue();
+        assertThat(payload.getNextHearingVenue()).isEqualTo(CHESTER_MAGISTRATE_S_COURT);
+    }
+
+    private static void checkPayloadDetails(
+        NoticeIssuedTemplateBody parentPayload,
+        AdjournCaseTemplateBody payload,
+        String nextHearingDate,
+        String nextHearingType,
+        String nextHearingTimeslot,
+        String hearingType,
+        String interpreterDescription
+    ) {
+        assertThat(parentPayload.getAppellantFullName()).isEqualTo(TEST_NAME);
+        assertThat(parentPayload.getCaseId()).isEqualTo("12345656789");
+        assertThat(parentPayload.getNino()).isEqualTo("JT 12 34 56 D");
+        assertThat(parentPayload.getAppointeeFullName()).isEqualTo(null);
+        assertThat(parentPayload.getNoticeType()).isEqualTo("DRAFT ADJOURNMENT NOTICE");
+        assertThat(parentPayload.getUserName()).isEqualTo(JUDGE_FULL_NAME);
+        assertThat(payload.getHeldOn()).isEqualTo(LocalDate.parse(DATE_2017));
+        assertThat(payload.getHeldAt()).isEqualTo(CHESTER_MAGISTRATE_S_COURT);
+        assertThat(payload.getHeldBefore()).isEqualTo(JUDGE_FULL_NAME);
+        assertThat(payload.getNextHearingDate()).isEqualTo(nextHearingDate);
+        assertThat(payload.getNextHearingType()).isEqualTo(nextHearingType);
+        assertThat(payload.getNextHearingTimeslot()).isEqualTo(nextHearingTimeslot);
+        assertThat(payload.getHeldAt()).isEqualTo(CHESTER_MAGISTRATE_S_COURT);
+        assertThat(payload.getHeldBefore()).isEqualTo(JUDGE_FULL_NAME);
+        assertThat(payload.getHeldOn()).isEqualTo(LocalDate.parse(DATE_2017));
+        assertThat(payload.getHearingType()).isEqualTo(hearingType);
+        assertThat(payload.getAdditionalDirections().get(0)).isEqualTo("something else");
+        assertThat(payload.getReasonsForDecision().get(0)).isEqualTo("Reasons 1");
+        assertThat(payload.getPanelMembersExcluded()).isEqualTo("yes");
+        assertThat(payload.getAppellantName()).isEqualTo(TEST_NAME);
+        assertThat(payload.getInterpreterDescription()).isEqualTo(interpreterDescription);
+    }
+
+    private void checkDocumentNoErrors() throws Exception {
+        PreSubmitCallbackResponse<SscsCaseData> result = getPreSubmitCallbackResponse();
+
+        assertThat(result.getErrors()).isEmpty();
+
+        assertThat(result.getData().getAdjournCasePreviewDocument().getDocumentUrl()).isEqualTo(DOCUMENT_URL);
+    }
+
+    private PreSubmitCallbackResponse<SscsCaseData> getPreSubmitCallbackResponse() throws Exception {
+        when(generateFile.assemble(any())).thenReturn(DOCUMENT_URL);
+
+        when(userDetails.getFullName()).thenReturn(JUDGE_FULL_NAME);
+
+        when(idamClient.getUserDetails("Bearer userToken")).thenReturn(userDetails);
+
+        MockHttpServletResponse response = getResponse(getRequestWithAuthHeader(json, CCD_MID_EVENT_PREVIEW_ADJOURN_CASE));
+        assertHttpStatus(response, HttpStatus.OK);
+        return deserialize(response.getContentAsString());
     }
 
 }
